manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adjacency
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: adjacency
spec:
  ingressClassName: nginx
  rules:
    - host: adjacency.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adjacency
                port:
                  number: 80
